chore: Fix tests broken in dart-sass.

--- a/packages/eyeglass/test/fixtures/includable_scss/heavy.weights/_animal.noises.sass
+++ b/packages/eyeglass/test/fixtures/includable_scss/heavy.weights/_animal.noises.sass
@@ -1,1 +1,1 @@
-$noise-bats-make: #eee !global
+$noise-bats-make: #eee
